syntax = "proto3";

import "etc.servers.proto";
import "etc.zones.proto";
import "etc.basic.proto";
import "etc.database.proto";

option go_package = "INServer/src/proto/msg";

enum NodeState {
    Unset = 0;
    Ready = 1;
    Running = 2;
    Offline = 3;
}

message ETCSyncNTF {
    BasicConfig BasicConfig = 1;
    Database Database = 2;
    ServerList ServerList = 3;
    ZoneList ZoneList = 4;
}

message NodeStartNTF {
    bytes Address = 1;
}

message Node {
    NodeState NodeState = 1;
    bytes NodeAddress = 2;
}

message NodesInfoNTF {
    repeated Node Nodes = 1;
}

message ResetConnectionNTF {
    int32 ServerID = 1;
}